# usd-http-asset-resolver

./: .gitignore  README.md
project/: CMakeLists.txt  README.md  build.ninja
project/cmake/: FindUSD.cmake
project/src/: CMakeLists.txt  Makefile  plugInfo.json  resolver.cpp  resolver.h
project/test/: custom_resolver.py
